2011-09-27  Ruben Van Boxem  <vanboxem.ruben@gmail.com>
	    Ozkan Sezer  <sezeroz@gmail.com>

	* uchar.h: New header, initial implementation of uchar.h.

2011-09-26  Ozkan Sezer  <sezeroz@gmail.com>

	* errno.h (EOVERFLOW): Remove.

2011-09-21  Ozkan Sezer  <sezeroz@gmail.com>

	* _timeval.h (timercmp): Added missing parens around the AND
	condition.

2011-09-17  Jonathan Yong  <jon_y@users.sourceforge.net>

	* pthread_time.h: New dummy header.
	* time.h: Include dummy header to support winpthreads.

2011-09-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	* errno.h (EOVERFLOW): Fix typo, use EFBIG.

2011-08-22  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw.h.in (__forceinline): Fix for C99 case and check for
	C++ mode.

2011-08-09  Jonathan Yong  <jon_y@users.sourceforge.net>

	* stdio.h (__mingw_asprintf): New.
	(__mingw_vasprintf): New.
	* _mingw_print_pop.h, _mingw_print_push.h: New macros to handle
	asprintf and vasprintf.

2011-08-07  Ozkan Sezer  <sezeroz@gmail.com>

	* sec_api/string_s.h: Added prototypes for wcscpy_s() and wcscat_s()
	after tracker item #3295337.

2011-07-23  Ozkan Sezer  <sezeroz@gmail.com>

	* crtdbg.h, malloc.h (_STATIC_ASSERT): Restrict the typedef variant
	of the macro to MSVC. Add an extern declaration variant for gcc,
	similar to C_ASSERT.

2011-07-23  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h (__debugbreak): Add prototype before the inline as it
	appears in intrin.h.

2011-07-11  Ruben Van Boxem  <vanboxem.ruben@gmail.com>

	* float.h: Extend guards about Clang's __FLOAT_H.

2011-06-15  Jonathan Yong  <jon_y@users.sourceforge.net>

	* sdks/_mingw_directx.h.in(__MINGW_HAS_DXSDK): Define.

2011-06-09  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw_mac.h(__MINGW_POISON_NAME): Define.

2011-05-23  Ozkan Sezer  <sezeroz@gmail.com>

	* ctype.h (__mb_cur_max):  Define as __mb_cur_max for the _MSVCRT_
	special case.
	* stdlib.h: Remove the duplicated and typographically erroneous