@@ -1,3 +1,7 @@
+2011-09-28  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* uchar.h: Add extern "C" guards.
+
 2011-09-27  Ruben Van Boxem  <vanboxem.ruben@gmail.com>
 	    Ozkan Sezer  <sezeroz@gmail.com>
 
